--- a/blog.html
+++ b/blog.html
@@ -20,16 +20,19 @@
     .blog-intro h1 { margin-bottom: 10px; }
     .blog-search { width: 100%; padding: 10px; margin: 15px 0; border-radius: 6px; border: 1px solid #ccc; }
     .blog-categories { margin-bottom: 20px; }
-    .blog-categories a { margin-right: 10px; background: #eee; color: #222; padding: 5px 12px; border-radius: 5px; text-decoration: none; font-size: 0.99em; }
-    .blog-categories a:hover { background: #4169e1; color: #fff; }
+    .blog-categories button { margin-right: 10px; background: #eee; color: #222; padding: 5px 12px; border-radius: 5px; border: none; cursor: pointer; font-size: 0.99em; transition: background 0.2s; }
+    .blog-categories button.active, .blog-categories button:hover { background: #4169e1; color: #fff; }
     .blog-list { display: flex; flex-direction: column; gap: 25px; }
-    .blog-preview { background: #fff; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.03); display: flex; gap: 18px; padding: 18px; align-items: flex-start; }
+    .blog-preview { background: #fff; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.03); display: flex; gap: 18px; padding: 18px; align-items: flex-start; position: relative; }
     .blog-preview img { width: 120px; height: 100px; object-fit: cover; border-radius: 8px; }
     .blog-preview h2 { margin: 0 0 10px 0; }
     .blog-preview .meta { font-size: 0.95em; color: #555; margin-bottom: 8px; }
     .blog-preview .summary { font-size: 1.08em; color: #222; margin-bottom: 10px; }
-    .blog-preview .read-more { background: #4169e1; color: #fff; padding: 7px 12px; border-radius: 4px; text-decoration: none; font-weight: bold; font-size: 0.98em; }
+    .blog-preview .read-more { background: #4169e1; color: #fff; padding: 7px 12px; border-radius: 4px; text-decoration: none; font-weight: bold; font-size: 0.98em; cursor: pointer; border: none; }
     .blog-preview .read-more:hover { background: #27408b; }
+    .blog-full-content { display: none; padding: 10px 0 0 0; }
+    .blog-preview.expanded .blog-full-content { display: block; }
+    .blog-preview.expanded .read-more { display: none; }
     .blog-sidebar section { margin-bottom: 28px; }
     .blog-sidebar h3 { margin-top: 0; }
     .blog-sidebar form input[type="email"] { width: 100%; padding: 8px; margin-bottom: 6px; border-radius: 4px; border: 1px solid #ccc; }
@@ -43,7 +46,7 @@
       .blog-sidebar { max-width: 100%; }
       .blog-preview { flex-direction: column; align-items: flex-start; }
       .blog-preview img { width: 100%; height: 160px; }
-      nav { gap: 8px; }
+      nav { gap: 8; }
       header img { height: 38px; }
     }
     @media (max-width: 600px) {
@@ -55,113 +58,187 @@
   </style>
 </head>
 <body>
-  <header>
-    <a href="index.html"><img src="logo.png" alt="THQ Logo"></a>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="blog.html" class="active">Blog</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-  <main>
-    <section class="blog-main">
-      <section class="blog-intro">
-        <h1>Our Blog</h1>
-        <p>Insights, updates, and tips from THQ Cyber Division Unincorporated.</p>
-        <input type="search" placeholder="Search blog posts..." class="blog-search">
-      </section>
-      <section class="blog-categories">
-        <span>Categories:</span>
-        <a href="#">Cybersecurity</a>
-        <a href="#">Productivity</a>
-        <a href="#">News</a>
-        <a href="#">IT Support</a>
-        <a href="#">Business Formation</a>
-      </section>
-      <section class="blog-list">
-        <!-- Cybersecurity -->
-        <article class="blog-preview">
-          <img src="https://images.unsplash.com/photo-1510511233900-192d6d7a6a48?auto=format&fit=crop&w=400&q=80" alt="Cybersecurity Checklist for Small Businesses">
-          <div>
-            <h2><a href="blog-cybersecurity-checklist.html">10-Step Cybersecurity Checklist for Small Businesses</a></h2>
-            <p class="meta">Posted by THQ Cyber Division Team on September 10, 2025 | <span class="category">Cybersecurity</span></p>
-            <p class="summary">Is your business protected from the latest threats? Follow our actionable 10-step checklist to secure your email, devices, cloud accounts, and more. Download a printable version for your office!</p>
-            <a href="blog-cybersecurity-checklist.html" class="read-more">Read More</a>
-          </div>
-        </article>
-        <!-- Productivity -->
-        <article class="blog-preview">
-          <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=400&q=80" alt="Virtual Assistant Productivity">
-          <div>
-            <h2><a href="blog-boost-productivity.html">How a Virtual Assistant Can Boost Your Team's Productivity</a></h2>
-            <p class="meta">Posted by Jane Doe on August 28, 2025 | <span class="category">Productivity</span></p>
-            <p class="summary">Discover how delegating tasks to a skilled virtual assistant helped one of our clients reclaim 10+ hours per week, streamline document workflows, and focus on core business growth.</p>
-            <a href="blog-boost-productivity.html" class="read-more">Read More</a>
-          </div>
-        </article>
-        <!-- News -->
-        <article class="blog-preview">
-          <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80" alt="Company News">
-          <div>
-            <h2><a href="blog-news-announcement.html">THQ Cyber Division Launches New Client Portal</a></h2>
-            <p class="meta">Posted by THQ Cyber Division Team on July 30, 2025 | <span class="category">News</span></p>
-            <p class="summary">We’re excited to announce our new secure client portal—making it easier than ever to request support, manage your information, and access exclusive resources.</p>
-            <a href="blog-news-announcement.html" class="read-more">Read More</a>
-          </div>
-        </article>
-        <!-- IT Support -->
-        <article class="blog-preview">
-          <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=400&q=80" alt="IT Support Solutions">
-          <div>
-            <h2><a href="blog-it-support-tips.html">5 IT Support Tips Every Remote Worker Should Know</a></h2>
-            <p class="meta">Posted by Support Specialist on July 20, 2025 | <span class="category">IT Support</span></p>
-            <p class="summary">Remote work is here to stay. Learn five essential IT support practices—from device updates to secure backups—to keep your workflow smooth and your data safe.</p>
-            <a href="blog-it-support-tips.html" class="read-more">Read More</a>
-          </div>
-        </article>
-        <!-- Business Formation -->
-        <article class="blog-preview">
-          <img src="https://images.unsplash.com/photo-1450101499163-c8848c66ca85?auto=format&fit=crop&w=400&q=80" alt="Business Incorporation Success">
-          <div>
-            <h2><a href="blog-incorporation-success.html">Case Study: Launching a US LLC with THQ Cyber Division</a></h2>
-            <p class="meta">Posted by THQ Cyber Division Team on July 15, 2025 | <span class="category">Business Formation</span></p>
-            <p class="summary">Discover how we guide our clients step-by-step through the US LLC formation process, from legal paperwork and compliance to remote support and official address setup. See what sets our business support apart.</p>
-            <a href="blog-incorporation-success.html" class="read-more">Read More</a>
-          </div>
-        </article>
-      </section>
+<header>
+  <a href="index.html"><img src="logo.png" alt="THQ Logo"></a>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="blog.html" class="active">Blog</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+<main>
+  <section class="blog-main">
+    <section class="blog-intro">
+      <h1>Our Blog</h1>
+      <p>Insights, updates, and tips from THQ Cyber Division Unincorporated.</p>
+      <input type="search" id="blogSearch" placeholder="Search blog posts..." class="blog-search" onkeyup="filterPostsBySearch()">
     </section>
-    <aside class="blog-sidebar">
-      <section>
-        <h3>About This Blog</h3>
-        <p>We share the latest in cybersecurity, digital productivity, company news, and practical IT tips.</p>
-      </section>
-      <section>
-        <h3>Subscribe</h3>
-        <form action="https://formspree.io/f/mnnvzaaz" method="POST">
-          <input type="email" name="email" placeholder="Your email" required>
-          <button type="submit">Subscribe</button>
-        </form>
-      </section>
-      <section>
-        <h3>Popular Posts</h3>
-        <ul>
-          <li><a href="blog-boost-productivity.html">How a Virtual Assistant Can Boost Your Team's Productivity</a></li>
-          <li><a href="blog-cybersecurity-checklist.html">10-Step Cybersecurity Checklist for Small Businesses</a></li>
-        </ul>
-      </section>
-    </aside>
-  </main>
-  <footer>
-    <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
-    <nav>
-      <a href="terms.html">Terms</a> |
-      <a href="privacy.html">Privacy</a> |
-      <a href="mailto:thqcs@protonmail.com">Contact</a>
-      <a href="rss.xml" style="margin-left:10px;">RSS</a>
-    </nav>
-  </footer>
+    <section class="blog-categories" id="blogCategories">
+      <button class="active" data-category="all" onclick="filterPosts('all', this)">All</button>
+      <button data-category="cybersecurity" onclick="filterPosts('cybersecurity', this)">Cybersecurity</button>
+      <button data-category="productivity" onclick="filterPosts('productivity', this)">Productivity</button>
+      <button data-category="news" onclick="filterPosts('news', this)">News</button>
+      <button data-category="it-support" onclick="filterPosts('it-support', this)">IT Support</button>
+      <button data-category="business-formation" onclick="filterPosts('business-formation', this)">Business Formation</button>
+    </section>
+    <section class="blog-list" id="blogList">
+      <!-- Cybersecurity -->
+      <article class="blog-preview" data-category="cybersecurity">
+        <img src="https://images.unsplash.com/photo-1510511233900-192d6d7a6a48?auto=format&fit=crop&w=400&q=80" alt="Cybersecurity Checklist for Small Businesses">
+        <div>
+          <h2>10-Step Cybersecurity Checklist for Small Businesses</h2>
+          <p class="meta">Posted by THQ Cyber Division Team on September 10, 2025 | <span class="category">Cybersecurity</span></p>
+          <p class="summary">Is your business protected from the latest threats? Follow our actionable 10-step checklist to secure your email, devices, cloud accounts, and more. Download a printable version for your office!</p>
+          <button class="read-more" onclick="expandArticle(this)">Read More</button>
+          <div class="blog-full-content">
+            <h3>10 Steps to Protect Your Small Business</h3>
+            <ol>
+              <li>Use strong, unique passwords for all accounts.</li>
+              <li>Enable two-factor authentication wherever possible.</li>
+              <li>Regularly update all software and operating systems.</li>
+              <li>Train employees to recognize phishing attempts.</li>
+              <li>Back up your data regularly to secure, offsite locations.</li>
+              <li>Install and maintain antivirus software.</li>
+              <li>Restrict admin rights to essential personnel only.</li>
+              <li>Secure your Wi-Fi networks with strong encryption.</li>
+              <li>Monitor account activity for suspicious behavior.</li>
+              <li>Have an incident response plan (know who to call and what to do).</li>
+            </ol>
+            <p>Download a printable checklist for your team, and reach out to THQ Cyber Division for a custom security audit!</p>
+          </div>
+        </div>
+      </article>
+      <!-- Productivity -->
+      <article class="blog-preview" data-category="productivity">
+        <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=400&q=80" alt="Virtual Assistant Productivity">
+        <div>
+          <h2>How a Virtual Assistant Can Boost Your Team's Productivity</h2>
+          <p class="meta">Posted by Jane Doe on August 28, 2025 | <span class="category">Productivity</span></p>
+          <p class="summary">Discover how delegating tasks to a skilled virtual assistant helped one of our clients reclaim 10+ hours per week, streamline document workflows, and focus on core business growth.</p>
+          <button class="read-more" onclick="expandArticle(this)">Read More</button>
+          <div class="blog-full-content">
+            <h3>Client Story: More Time, Less Stress</h3>
+            <p>One of our professional services clients was overwhelmed with repetitive document editing, inbox management, and appointment coordination. After partnering with a THQ Cyber Division virtual assistant, they delegated all routine scheduling, received error-free reports, and gained back more than 10 hours a week.</p>
+            <ul>
+              <li>Routine admin tasks handled daily</li>
+              <li>Calendar and travel planning streamlined</li>
+              <li>Quick turnaround on document proofreading</li>
+              <li>Consistent communication with project stakeholders</li>
+            </ul>
+            <p>Ready to reclaim your time? <a href="contact.html">Contact us</a> to learn more about our tailored virtual assistant services.</p>
+          </div>
+        </div>
+      </article>
+      <!-- News -->
+      <article class="blog-preview" data-category="news">
+        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80" alt="Company News">
+        <div>
+          <h2>THQ Cyber Division Launches New Client Portal</h2>
+          <p class="meta">Posted by THQ Cyber Division Team on July 30, 2025 | <span class="category">News</span></p>
+          <p class="summary">We’re excited to announce our new secure client portal—making it easier than ever to request support, manage your information, and access exclusive resources.</p>
+          <button class="read-more" onclick="expandArticle(this)">Read More</button>
+          <div class="blog-full-content">
+            <h3>About the Portal</h3>
+            <p>The new portal allows registered users to:</p>
+            <ul>
+              <li>Submit and track support requests online</li>
+              <li>Access downloadable resources and guides</li>
+              <li>Securely update their contact and service details</li>
+              <li>Receive real-time notifications about service changes</li>
+            </ul>
+            <p>Visit the <a href="#">Client Portal</a> (login required) or <a href="contact.html">contact support</a> to get started.</p>
+          </div>
+        </div>
+      </article>
+      <!-- IT Support -->
+      <article class="blog-preview" data-category="it-support">
+        <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=400&q= alt="IT Support Solutions">
+        <div>
+          <h2>5 IT Support Tips Every Remote Worker Should Know</h2>
+          <p class="meta">Posted by Support Specialist on July 20, 2025 | <span class="category">IT Support</span></p>
+          <p class="summary">Remote work is here to stay. Learn five essential IT support practices—from device updates to secure backups—to keep your workflow smooth and your data safe.</p>
+          <button class="read-more" onclick="expandArticle(this)">Read More</button>
+          <div class="blog-full-content">
+            <h3>Essential Tips</h3>
+            <ol>
+              <li>Always keep your operating system and apps up to date.</li>
+              <li>Use a VPN when connecting to public or home Wi-Fi.</li>
+              <li>Back up important files to secure cloud or external storage.</li>
+              <li>Install endpoint security and enable firewalls.</li>
+              <li>Contact IT support early if you notice strange behavior or performance issues.</li>
+            </ol>
+            <p>Our remote IT support team is available for quick troubleshooting, device setup, and ongoing protection. <a href="contact.html">Get help now</a>.</p>
+          </div>
+        </div>
+      </article>
+      <!-- Business Formation -->
+      <article class="blog-preview" data-category="business-formation">
+        <img src="https://images.unsplash.com/photo-1450101499163-c8848c66ca85?auto=format&fit=crop&w=400&q=80" alt="Business Incorporation Success">
+        <div>
+          <h2>Case Study: Launching a US LLC with THQ Cyber Division</h2>
+          <p class="meta">Posted by THQ Cyber Division Team on July 15, 2025 | <span class="category">Business Formation</span></p>
+          <p class="summary">Discover how we guide our clients step-by-step through the US LLC formation process, from legal paperwork and compliance to remote support and official address setup. See what sets our business support apart.</p>
+          <button class="read-more" onclick="expandArticle(this)">Read More</button>
+          <div class="blog-full-content">
+            <h3>Our LLC Formation Approach</h3>
+            <ul>
+              <li>Personalized guidance through state selection and registration</li>
+              <li>Transparent pricing and document preparation</li>
+              <li>Virtual office and registered agent options</li>
+              <li>Ongoing compliance reminders and support</li>
+            </ul>
+            <p>Ready to launchdiv>
+        </div>
+      </article>
+    </section>
+  </section>
+  <aside class="blog-sidebar">
+    <section>
+      <h3>About This Blog</h3>
+      <p>We share the latest in cybersecurity, digital productivity, company news, and practical IT tips.</p>
+    </section>
+    <section>
+      <h3>Subscribe</h3>
+      <form action="https://formspree.io/f/mnnvzaaz" method="POST">
+        <input type="email" name="email" placeholder="Your email" required>
+        <button type="submit">Subscribe</button>
+      </form>
+    </section>
+    <section>
+      <h3>Popularh3>
+      <ul>
+        <li><a href="#">10-Step Cybersecurity Checklist for Small Businesses</a></li>
+        <li><a href="#">How a Virtual Assistant Can Boost Your Team's Productivity</a></li>
+      </ul>
+    </section>
+  </aside>
+</main>
+<footer>
+  <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
+  <nav>
+    <a href="terms.html">Terms</a> |
+    <a href="privacy.html">Privacy</a> |
+    <a href="mailto:thqcs@protonmail.com">Contact</a>
+    <a href="rss.xml" style="margin-left:10px;">RSS</a>
+  </nav 'flex' : 'none';
+  });
+  filterPostsBySearch(); // Ensure search filter is still applied after filtering by category
+}
+function expandArticle(btn) {
+  const preview = btn.closest('.blog-preview');
+  preview.classList.add('expanded');
+}
+function filterPostsBySearch() {
+  const search = document.getElementById('blogSearch').value.toLowerCase();
+  document.querySelectorAll('.blog-preview').forEach(post => {
+    // Only filter visible posts (by category)
+    if (post.style.display === "none") return;
+    const text = post.innerText.toLowerCase();
+    post.style.display = text.includes(search) ? 'flex' : 'none';
+  });
+}
+</script>
 </body>
 </html>
