--- a/blog.html
+++ b/blog.html
@@ -207,7 +207,7 @@
       </form>
     </section>
     <section>
-      <h3>Popularh3>
+      <h3>Popular</h3>
       <ul>
         <li><a href="#">10-Step Cybersecurity Checklist for Small Businesses</a></li>
         <li><a href="#">How a Virtual Assistant Can Boost Your Team's Productivity</a></li>
