--- a/blog.html
+++ b/blog.html
@@ -81,7 +81,7 @@
   <button data-category="productivity" onclick="setCategory('productivity', this)">Productivity</button>
   <button data-category="news" onclick="setCategory('news', this)">News</button>
   <button data-category="it-support" onclick="setCategory('it-support', this)">IT Support</button>
-  <button data-category="business-formation" onclick="setCategory('business-formation', this)">List">
+  <button data-category="business-formation" onclick="setCategory('business-formation', this)">List"</button>
   <!-- Cybersecurity -->
   <article class="blog-preview" data-category="cybersecurity">
     <img src="https://images.unsplash.com/photo-1510511233900-192d6d7a6a48?auto=format&fit=crop&w=400&q=80" alt="Cybersecurity Checklist for Small Businesses">
